test/libyul/yulSyntaxTests/if_statement_invalid_4.yul
{
    if calldatasize {}
}
// ----
// ParserError 2314: (22-23): Expected '(' but got '{'
